# zona-prop-scraper

./: .gitignore  README.md  analysis-estates.py  import requests.py  pyproject.toml  question  requirements.txt  setup.py  utils.py  web-scraping-learn.py  zonaprop-scraping.py  zonaprop-scrapping.py
analysis/: analysis-estates.py  anlysis-sale-estates.ipynb  cloudscrapper.ipynb  exploratory-analysis.ipynb
data/: data-17-07-2021_122135.csv  data-17-07-2021_122135.xls  data-17-07-2021_173036.csv  data-17-07-2021_173036.xls  data-20-07-2021_134233.csv  data-20-07-2021_134233.xls  data-21-07-2021_123936.csv  data-21-07-2021_123936.xls  data-22-07-2021_131746.csv  data-22-07-2021_131746.xls  data-23-07-2021_095941.csv  data-23-07-2021_095941.xls  data-23-07-2021_210356.csv  data-23-07-2021_210356.xls  data-24-07-2021_140558.csv  data-24-07-2021_140558.xls  data-25-07-2021_200400.csv  data-25-07-2021_200400.xls  data-26-07-2021_132240.csv  data-26-07-2021_132240.xls
src/: browser.py  scraper.py  scrapper.py  utils.py
test/: conftest.py  html_page.html  test_browser.py  test_sample.py  test_scraper.py  test_scrapper.py  test_utils.py
